# Survival-Shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: Fragment.frag  Vertex.vert
src/: CMakeLists.txt  main.cpp  pch.h
src/core/: Display.cpp  Display.h  Logger.cpp  Logger.h
src/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Light.h
src/inputs/: Input.cpp  Input.h
src/models/: Models.h  loader.cpp  loader.h
src/renderer/: MasterRenderer.cpp  MasterRenderer.h  Renderer.cpp  Renderer.h
src/shaders/: ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
src/textures/: ModelTexture.h
src/toolbox/: Utils.cpp  Utils.h
